2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	* configure.ac:
	Change to use the app-defaults default dir configured in libXt.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-23  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* Makefile.am: 
	Set HAS_ARC4_RANDOM if arc4random() function is found
	Set RANDOMMANDEFS to correctly substitute alternate random 
	device/method descriptions in man page.

2005-11-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am (MANDEFS): 
	Fix file paths in man pages.

2005-11-20  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Bug #5113: The insertion of -lutil into XDM_LIBS ended up having no
	effect because  PKG_CHECK_MODULES(XDM, ...) later overwrote it.  So put
	-lutil into XDM_OS_LIBS and add XDM_OS_LIBS to XDM_LIBS later.

2005-11-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Add dependency on xau.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update dependencies to work with separate build roots.

2005-11-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* Makefile.am:
	* greeter/Makefile.am:
	Add --enable-dynamic-greeter flag to allow choosing whether
	greeter should be built into xdm binary or dynamically loaded
	libXdmGreet.so object.
	Add -rdynamic flag to link options when using gcc with dynamic
	greeter to allow greeter object to reference symbols in xdm.

2005-11-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am: 
	Install xdm man page using APP_MAN_SUFFIX instead of forcing .1

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.
